Første del af Estimate_Covariance_Matrix.py, nu med korrekt resultat, der var lige lidt små-fejl i nogle udregninger

--- a/Lokalt_test_cov_matrix_korrekt.ipynb
+++ b/Lokalt_test_cov_matrix_korrekt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "141e613d-79ae-4867-b819-bcdfe3c54ee4",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
     "from pandas.tseries.offsets import MonthEnd\n",
     "from Prepare_Data import process_risk_free_rate, process_return_data, wealth_func, load_and_filter_market_returns_test, process_all_data, process_cluster_labels\n",
     "from General_Functions import size_screen_fun, addition_deletion_fun\n",
-    "from Estimate_Covariance_Matrix import process_cluster_labels\n",
+    "from Estimate_Covariance_Matrix import process_cluster_data\n",
     "import numpy as np\n",
     "from scipy.stats import rankdata\n",
     "import re\n",
@@ -535,12 +535,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "66a20429-80c6-47f8-a309-8f0688a5189a",
+   "execution_count": 5,
+   "id": "447732b3-d290-4b41-8aea-6d322e0654a6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_cluster_data(chars,daily, cluster_labels_path, factor_details_path):\n",
+    "#New version:\n",
+    "\n",
+    "def process_cluster_data(chars, daily, cluster_labels_path, factor_details_path):\n",
     "    \"\"\"\n",
     "    Behandler cluster data ved at læse og forberede cluster labels, beregne cluster ranks,\n",
     "    tilføje industry/market dummies, standardisere faktorer og flette daglige returdata.\n",
@@ -554,29 +556,14 @@
     "    Returnerer:\n",
     "    - cluster_data_d: Behandlet DataFrame med alle transformationer\n",
     "\n",
-    "    Eksempel på brug:\n",
+    "    Eksempel på brug: \n",
     "    file_path_cluster_labels = \"Data/Cluster Labels.csv\"\n",
     "    file_path_factor_details = \"Data/Factor Details.xlsx\"\n",
     "    cluster_data_d = process_cluster_data(chars, daily, file_path_cluster_labels, file_path_factor_details)\n",
-    "    \n",
     "    \"\"\"\n",
     "\n",
-    "    # Læs cluster labels\n",
-    "    cluster_labels = pd.read_csv(cluster_labels_path)\n",
-    "    cluster_labels[\"cluster\"] = cluster_labels[\"cluster\"].str.lower().str.replace(r\"\\s|-\", \"_\", regex=True)\n",
-    "\n",
-    "    # Læs factor details\n",
-    "    factor_signs = pd.read_excel(factor_details_path, usecols=[\"abr_jkp\", \"direction\"])\n",
-    "    factor_signs.rename(columns={\"abr_jkp\": \"characteristic\"}, inplace=True)\n",
-    "    factor_signs.dropna(subset=[\"characteristic\"], inplace=True)\n",
-    "    factor_signs[\"direction\"] = factor_signs[\"direction\"].astype(float)\n",
-    "\n",
-    "    # Merge factor signs med cluster labels\n",
-    "    cluster_labels = cluster_labels.merge(factor_signs, on=\"characteristic\", how=\"left\")\n",
-    "\n",
-    "    # Tilføj specifikt cluster til rvol_252d\n",
-    "    new_row = pd.DataFrame({\"characteristic\": [\"rvol_252d\"], \"cluster\": [\"low_risk\"], \"direction\": [-1]})\n",
-    "    cluster_labels = pd.concat([cluster_labels, new_row], ignore_index=True)\n",
+    "    # Indlæs cluster labels separat (bruger samme metode som i den anden version)\n",
+    "    cluster_labels = process_cluster_labels(cluster_labels_path, factor_details_path)\n",
     "\n",
     "    # Filtrer gyldige karakteristika\n",
     "    valid_chars = chars[chars[\"valid\"] == True]\n",
@@ -588,9 +575,12 @@
     "\n",
     "    for cl in clusters:\n",
     "        chars_sub = cluster_labels[(cluster_labels[\"cluster\"] == cl) & (cluster_labels[\"characteristic\"].isin(features))]\n",
-    "        data_sub = cluster_data_m[chars_sub[\"characteristic\"].values].copy()\n",
     "\n",
-    "        for c in chars_sub[\"characteristic\"].values:\n",
+    "        # Undgå potentielle fejl ved at sikre, at kun eksisterende kolonner vælges\n",
+    "        valid_features = [c for c in chars_sub[\"characteristic\"].values if c in cluster_data_m.columns]\n",
+    "        data_sub = cluster_data_m[valid_features].copy()\n",
+    "\n",
+    "        for c in valid_features:\n",
     "            dir_value = chars_sub.loc[chars_sub[\"characteristic\"] == c, \"direction\"].values[0]\n",
     "            if dir_value == -1:\n",
     "                data_sub[c] = 1 - data_sub[c]\n",
@@ -600,10 +590,10 @@
     "    # Konverter cluster ranks til DataFrame\n",
     "    cluster_ranks_df = pd.DataFrame(cluster_ranks)\n",
     "\n",
-    "    # Kombiner med oprindelige data\n",
+    "    # Kombiner med de oprindelige data\n",
     "    cluster_data_m = cluster_data_m[[\"id\", \"eom\", \"size_grp\", \"ff12\"]].copy()\n",
     "    cluster_data_m[\"eom_ret\"] = cluster_data_m[\"eom\"] + pd.DateOffset(months=1)\n",
-    "    cluster_data_m[\"eom_ret\"] = cluster_data_m[\"eom_ret\"] + pd.offsets.MonthEnd(0)\n",
+    "    cluster_data_m[\"eom_ret\"] = cluster_data_m[\"eom_ret\"] + pd.offsets.MonthEnd(0)  # Sikrer, at det er sidste dag i måneden\n",
     "\n",
     "    # Merge cluster rankings\n",
     "    cluster_data_m = pd.concat([cluster_data_m, cluster_ranks_df], axis=1)\n",
@@ -618,11 +608,10 @@
     "        cluster_data_m[\"mkt\"] = 1\n",
     "        ind_factors = [\"mkt\"]\n",
     "\n",
-    "    # Standardiser faktorer per eom\n",
-    "    cluster_data_m[clusters] = cluster_data_m.groupby(\"eom\")[clusters].transform(lambda x: (x - x.mean()) / x.std(ddof=0))\n",
-    "    cluster_data_m[clusters] = cluster_data_m[clusters].fillna(0)\n",
+    "    # Standardiser faktorer per eom (Bruger samme metode som den anden version)\n",
+    "    cluster_data_m[clusters] = cluster_data_m.groupby(\"eom\")[clusters].transform(lambda x: (x - x.mean()) / x.std())\n",
     "\n",
-    "    # Tilføj daglige returdata\n",
+    "    # Indlæs daglige returdata\n",
     "    min_eom = cluster_data_m[\"eom\"].min()\n",
     "    daily_filtered = daily[daily[\"date\"] >= min_eom][[\"id\", \"date\", \"ret_exc\", \"eom\"]].copy()\n",
     "    daily_filtered.rename(columns={\"eom\": \"eom_ret\"}, inplace=True)\n",
@@ -630,7 +619,7 @@
     "    # Flet daglige data med cluster_data_m\n",
     "    cluster_data_d = cluster_data_m.merge(daily_filtered, on=[\"id\", \"eom_ret\"], how=\"inner\")\n",
     "\n",
-    "    # Fjern rækker med manglende værdier\n",
+    "    # Fjerne manglende værdier\n",
     "    cluster_data_d.dropna(inplace=True)\n",
     "\n",
     "    return cluster_data_d\n"
@@ -638,14 +627,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "6b0b468b-bd9b-4f0a-96b8-df6290d725a2",
+   "execution_count": 6,
+   "id": "ad722021-5480-48a7-8c8b-055694e7d4da",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Rækker før dropna(): (511500, 32)\n",
+      "Rækker efter dropna(): (511500, 32)\n",
+      "           id        eom size_grp   ff12    eom_ret  low_leverage  investment  \\\n",
+      "0       10104 2012-01-31     mega  BusEq 2012-02-29      1.680821   -0.014307   \n",
+      "1       10104 2012-01-31     mega  BusEq 2012-02-29      1.680821   -0.014307   \n",
+      "2       10104 2012-01-31     mega  BusEq 2012-02-29      1.680821   -0.014307   \n",
+      "3       10104 2012-01-31     mega  BusEq 2012-02-29      1.680821   -0.014307   \n",
+      "4       10104 2012-01-31     mega  BusEq 2012-02-29      1.680821   -0.014307   \n",
+      "...       ...        ...      ...    ...        ...           ...         ...   \n",
+      "511495  92655 2023-10-31     mega  Money 2023-11-30      0.091804   -1.820302   \n",
+      "511496  92655 2023-10-31     mega  Money 2023-11-30      0.091804   -1.820302   \n",
+      "511497  92655 2023-10-31     mega  Money 2023-11-30      0.091804   -1.820302   \n",
+      "511498  92655 2023-10-31     mega  Money 2023-11-30      0.091804   -1.820302   \n",
+      "511499  92655 2023-10-31     mega  Money 2023-11-30      0.091804   -1.820302   \n",
+      "\n",
+      "            size     value   quality  ...  Hlth  Manuf  Money  NoDur  Other  \\\n",
+      "0      -0.994839 -0.731867  0.806993  ...     0      0      0      0      0   \n",
+      "1      -0.994839 -0.731867  0.806993  ...     0      0      0      0      0   \n",
+      "2      -0.994839 -0.731867  0.806993  ...     0      0      0      0      0   \n",
+      "3      -0.994839 -0.731867  0.806993  ...     0      0      0      0      0   \n",
+      "4      -0.994839 -0.731867  0.806993  ...     0      0      0      0      0   \n",
+      "...          ...       ...       ...  ...   ...    ...    ...    ...    ...   \n",
+      "511495 -1.821256 -0.440187  0.912515  ...     0      0      1      0      0   \n",
+      "511496 -1.821256 -0.440187  0.912515  ...     0      0      1      0      0   \n",
+      "511497 -1.821256 -0.440187  0.912515  ...     0      0      1      0      0   \n",
+      "511498 -1.821256 -0.440187  0.912515  ...     0      0      1      0      0   \n",
+      "511499 -1.821256 -0.440187  0.912515  ...     0      0      1      0      0   \n",
+      "\n",
+      "        Shops  Telcm  Utils       date   ret_exc  \n",
+      "0           0      0      0 2012-02-01  0.023749  \n",
+      "1           0      0      0 2012-02-02 -0.002425  \n",
+      "2           0      0      0 2012-02-03  0.010412  \n",
+      "3           0      0      0 2012-02-06 -0.003780  \n",
+      "4           0      0      0 2012-02-07 -0.001726  \n",
+      "...       ...    ...    ...        ...       ...  \n",
+      "511495      0      0      0 2023-11-24  0.005932  \n",
+      "511496      0      0      0 2023-11-27 -0.006626  \n",
+      "511497      0      0      0 2023-11-28 -0.005840  \n",
+      "511498      0      0      0 2023-11-29 -0.010478  \n",
+      "511499      0      0      0 2023-11-30  0.033417  \n",
+      "\n",
+      "[511500 rows x 32 columns]\n",
+      "(511500, 32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_path_cluster_labels = \"Data/Cluster Labels.csv\"\n",
+    "file_path_factor_details = \"Data/Factor Details.xlsx\"\n",
+    "cluster_data_d = process_cluster_data(chars, daily, file_path_cluster_labels, file_path_factor_details)\n",
+    "print(cluster_data_d)\n",
+    "print(cluster_data_d.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c752a862-5401-43f7-be9d-5affbdacd674",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8543f019-b2e0-4a39-a8e4-3bb081544fa2",
+   "metadata": {},
+   "source": [
+    "### Importeret funktion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e49fa3f2-31a5-4afb-b0a0-d48b3c0b68d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All missing excludes 0.60% of the observations\n",
+      "Filen er indlæst og filtreret succesfuldt.\n",
+      "No size screen\n",
+      "Turnover wo addition/deletion rule: 0.19%\n",
+      "Turnover w  addition/deletion rule: 33.72%\n",
       "           id        eom size_grp   ff12    eom_ret  low_leverage  investment  \\\n",
       "0       10104 2012-01-31     mega  BusEq 2012-02-29      1.685728   -0.014349   \n",
       "1       10104 2012-01-31     mega  BusEq 2012-02-29      1.685728   -0.014349   \n",
@@ -691,33 +765,21 @@
     }
    ],
    "source": [
+    "#Indhenter chars og daily:\n",
+    "file_path_usa_test = \"./data_test/usa_test.parquet\"\n",
+    "daily_file_path = \"./data_test/usa_dsf_test.parquet\"\n",
+    "file_path_world_ret = \"./data_test/world_ret_test.csv\"\n",
+    "risk_free_path = \"./data_test/risk_free_test.csv\"\n",
+    "market_path = \"./data_test/market_returns_test.csv\"\n",
+    "\n",
+    "# Kald funktionen\n",
+    "chars, daily = process_all_data(file_path_usa_test, daily_file_path, file_path_world_ret, risk_free_path, market_path)\n",
+    "\n",
     "file_path_cluster_labels = \"Data/Cluster Labels.csv\"\n",
     "file_path_factor_details = \"Data/Factor Details.xlsx\"\n",
     "cluster_data_d = process_cluster_data(chars, daily, file_path_cluster_labels, file_path_factor_details)\n",
     "print(cluster_data_d)\n",
     "print(cluster_data_d.shape)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8543f019-b2e0-4a39-a8e4-3bb081544fa2",
-   "metadata": {},
-   "source": [
-    "### Importeret funktion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e49fa3f2-31a5-4afb-b0a0-d48b3c0b68d6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "file_path_cluster_labels = \"Data/Cluster Labels.csv\"\n",
-    "file_path_factor_details = \"Data/Factor Details.xlsx\"\n",
-    "cluster_data_d = process_cluster_data(chars, daily, file_path_cluster_labels, file_path_factor_details)"
    ]
   },
   {
