TIlføjet en del og rettet notebook

--- a/Lokalt_test_cov_matrix_korrekt.ipynb
+++ b/Lokalt_test_cov_matrix_korrekt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "id": "141e613d-79ae-4867-b819-bcdfe3c54ee4",
    "metadata": {},
    "outputs": [],
@@ -19,13 +19,14 @@
     "from scipy.stats import rankdata\n",
     "import re\n",
     "import gc\n",
+    "import ewma\n",
     "\n",
     "import statsmodels.formula.api as smf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "c46034c3-c4de-44ae-a749-55585c796280",
    "metadata": {},
    "outputs": [
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "89413faf-1b22-46be-81f4-60bf3e713c6f",
    "metadata": {},
    "outputs": [
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "985c146d-d311-4387-8745-2fe92cd45122",
    "metadata": {},
    "outputs": [
@@ -257,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "680e0d83-3b35-40ea-bf05-0264e10513b9",
    "metadata": {},
    "outputs": [
@@ -327,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "e0773a2e-6762-4db4-86fb-950bb1721a4e",
    "metadata": {},
    "outputs": [
@@ -386,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "9faab0ad-a118-4f73-b77a-31262185c4da",
    "metadata": {},
    "outputs": [
@@ -416,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "id": "46a4f520-b937-47c1-9b94-388bf9c07a35",
    "metadata": {},
    "outputs": [
@@ -537,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "id": "447732b3-d290-4b41-8aea-6d322e0654a6",
    "metadata": {},
    "outputs": [],
@@ -627,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "id": "14b7e314-5d82-4d24-aabc-c2f2a38bb222",
    "metadata": {},
    "outputs": [],
@@ -639,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "id": "209cd4b0-f84a-4a1e-aac8-05997bdd23de",
    "metadata": {},
    "outputs": [
@@ -649,7 +650,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "id": "570392ee-cdb9-4b90-9bb3-29e5bd600dce",
    "metadata": {},
    "outputs": [
@@ -694,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "id": "3d5345b1-29e0-400a-9c19-eaba1cede121",
    "metadata": {},
    "outputs": [
@@ -1055,7 +1056,7 @@
        "[511500 rows x 32 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "id": "b60a10b0-babd-4b1a-bd6a-89908464d965",
    "metadata": {},
    "outputs": [],
@@ -1119,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "id": "393ea46b-c360-4569-a949-4da5b9115cd8",
    "metadata": {},
    "outputs": [],
@@ -1129,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 16,
    "id": "edcc037c-02f1-4302-b4f0-16299efe5dc2",
    "metadata": {},
    "outputs": [
@@ -1351,7 +1352,7 @@
        "[2978 rows x 5 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1370,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 17,
    "id": "def83c9d-66f2-4055-be31-8f2a808aeb5b",
    "metadata": {},
    "outputs": [],
@@ -1428,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "id": "c2f78f2b-f153-46bc-ae0a-cf7fc801b5db",
    "metadata": {},
    "outputs": [],
@@ -1438,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 19,
    "id": "88470014-8f37-4514-ac36-c0b6100c16e8",
    "metadata": {},
    "outputs": [
@@ -1812,7 +1813,7 @@
        "[2978 rows x 26 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1831,7 +1832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "id": "b6f0e55c-5913-424d-aea5-171960ee5d67",
    "metadata": {},
    "outputs": [],
@@ -1865,7 +1866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 25,
    "id": "1d97ae3e-f802-4e20-add1-49cbadc2d7f0",
    "metadata": {},
    "outputs": [
@@ -1984,7 +1985,7 @@
        "[511500 rows x 3 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1995,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 28,
    "id": "71e89a3f-38d2-456b-b4d8-d9c068846e60",
    "metadata": {},
    "outputs": [],
@@ -2051,7 +2052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 29,
    "id": "64678fc0-a5e9-4a04-9920-9cc0cff596e4",
    "metadata": {},
    "outputs": [],
@@ -2061,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 30,
    "id": "b8e8cceb-17e4-4463-abf6-db0129423ae3",
    "metadata": {},
    "outputs": [
@@ -2180,7 +2181,7 @@
        "[511500 rows x 3 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2191,15 +2192,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "d540ff9e-d6a2-41f3-bf70-669fddadf659",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9945139356168285\n",
+      "63\n"
+     ]
+    }
+   ],
+   "source": [
+    "lambda_val = 0.5 ** (1.0 / settings['cov_set']['hl_stock_var'])\n",
+    "print(lambda_val)\n",
+    "start_val = settings['cov_set']['initial_var_obs']\n",
+    "print(start_val)\n",
+    "#test= ewma.ewma_c(data, lambda_val, start)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 42,
+   "id": "d5e58b89-5f89-4c38-b56d-5518a00a4ba2",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[42], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m group\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Anvend EWMA per gruppe\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m data \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mgroupby(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m'\u001b[39m, group_keys\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\u001b[38;5;241m.\u001b[39mapply(apply_ewma)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def apply_ewma(group):\n",
+    "    group['res_vol'] = ewma.ewma_c(group['res'].values, lambda_val, start_val)\n",
+    "    return group\n",
+    "\n",
+    "# Anvend EWMA per gruppe\n",
+    "data = data.groupby('id', group_keys=False).apply(apply_ewma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "6c13d09d-b6ae-4415-b4d1-3cca4fb963c3",
    "metadata": {},
    "outputs": [],
@@ -2273,7 +2316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 27,
    "id": "4662c526-fc81-4d29-9417-53212b0be60f",
    "metadata": {},
    "outputs": [
@@ -2404,7 +2447,7 @@
        "[511500 rows x 4 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
