TIlføjet en del og rettet notebook

--- a/Lokalt_test_cov_matrix_korrekt.ipynb
+++ b/Lokalt_test_cov_matrix_korrekt.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "141e613d-79ae-4867-b819-bcdfe3c54ee4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Features list length: 154\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -1866,7 +1874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "1d97ae3e-f802-4e20-add1-49cbadc2d7f0",
    "metadata": {},
    "outputs": [
@@ -1985,7 +1993,7 @@
        "[511500 rows x 3 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1996,7 +2004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "id": "71e89a3f-38d2-456b-b4d8-d9c068846e60",
    "metadata": {},
    "outputs": [],
@@ -2052,7 +2060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "id": "64678fc0-a5e9-4a04-9920-9cc0cff596e4",
    "metadata": {},
    "outputs": [],
@@ -2062,7 +2070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "id": "b8e8cceb-17e4-4463-abf6-db0129423ae3",
    "metadata": {},
    "outputs": [
@@ -2181,7 +2189,7 @@
        "[511500 rows x 3 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2192,52 +2200,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "d540ff9e-d6a2-41f3-bf70-669fddadf659",
+   "execution_count": 28,
+   "id": "d5e58b89-5f89-4c38-b56d-5518a00a4ba2",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0.9945139356168285\n",
-      "63\n"
+      "C:\\Users\\andre\\AppData\\Local\\Temp\\ipykernel_9344\\1017451334.py:8: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  data = spec_risk.groupby('id', group_keys=False).apply(apply_ewma)\n"
      ]
     }
    ],
    "source": [
     "lambda_val = 0.5 ** (1.0 / settings['cov_set']['hl_stock_var'])\n",
-    "print(lambda_val)\n",
     "start_val = settings['cov_set']['initial_var_obs']\n",
-    "print(start_val)\n",
-    "#test= ewma.ewma_c(data, lambda_val, start)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "d5e58b89-5f89-4c38-b56d-5518a00a4ba2",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[42], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m group\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Anvend EWMA per gruppe\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m data \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mgroupby(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m'\u001b[39m, group_keys\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\u001b[38;5;241m.\u001b[39mapply(apply_ewma)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'data' is not defined"
-     ]
-    }
-   ],
-   "source": [
     "def apply_ewma(group):\n",
     "    group['res_vol'] = ewma.ewma_c(group['res'].values, lambda_val, start_val)\n",
     "    return group\n",
     "\n",
     "# Anvend EWMA per gruppe\n",
-    "data = data.groupby('id', group_keys=False).apply(apply_ewma)"
+    "data = spec_risk.groupby('id', group_keys=False).apply(apply_ewma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "2906ad6b-21f1-4578-af97-e8cd371fff53",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>res</th>\n",
+       "      <th>res_vol</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10104</td>\n",
+       "      <td>2012-02-01</td>\n",
+       "      <td>0.013814</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10104</td>\n",
+       "      <td>2012-02-02</td>\n",
+       "      <td>-0.003386</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10104</td>\n",
+       "      <td>2012-02-03</td>\n",
+       "      <td>0.003454</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10104</td>\n",
+       "      <td>2012-02-06</td>\n",
+       "      <td>-0.000870</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10104</td>\n",
+       "      <td>2012-02-07</td>\n",
+       "      <td>0.002190</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>511495</th>\n",
+       "      <td>92655</td>\n",
+       "      <td>2023-11-24</td>\n",
+       "      <td>0.000802</td>\n",
+       "      <td>0.009110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>511496</th>\n",
+       "      <td>92655</td>\n",
+       "      <td>2023-11-27</td>\n",
+       "      <td>-0.001250</td>\n",
+       "      <td>0.009085</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>511497</th>\n",
+       "      <td>92655</td>\n",
+       "      <td>2023-11-28</td>\n",
+       "      <td>-0.004159</td>\n",
+       "      <td>0.009061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>511498</th>\n",
+       "      <td>92655</td>\n",
+       "      <td>2023-11-29</td>\n",
+       "      <td>0.010920</td>\n",
+       "      <td>0.009041</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>511499</th>\n",
+       "      <td>92655</td>\n",
+       "      <td>2023-11-30</td>\n",
+       "      <td>0.017196</td>\n",
+       "      <td>0.009052</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>511500 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           id       date       res   res_vol\n",
+       "0       10104 2012-02-01  0.013814       NaN\n",
+       "1       10104 2012-02-02 -0.003386       NaN\n",
+       "2       10104 2012-02-03  0.003454       NaN\n",
+       "3       10104 2012-02-06 -0.000870       NaN\n",
+       "4       10104 2012-02-07  0.002190       NaN\n",
+       "...       ...        ...       ...       ...\n",
+       "511495  92655 2023-11-24  0.000802  0.009110\n",
+       "511496  92655 2023-11-27 -0.001250  0.009085\n",
+       "511497  92655 2023-11-28 -0.004159  0.009061\n",
+       "511498  92655 2023-11-29  0.010920  0.009041\n",
+       "511499  92655 2023-11-30  0.017196  0.009052\n",
+       "\n",
+       "[511500 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
    ]
   },
   {
